feat: add logger and trace middleCwares
