# internal/types/res/key.go
@@ -1,0 +1,5 @@
+package res
+
+type GetPublicKeyResponse struct {
+	Key string
+}
